SERVER-16501: Uncaught WriteConflictException in TTLMonitor