src/mongo/db/ttl.cpp
@@ -41,6 +41,7 @@
 #include "mongo/db/client.h"
 #include "mongo/db/commands/fsync.h"
 #include "mongo/db/commands/server_status_metric.h"
+#include "mongo/db/concurrency/write_conflict_exception.h"
 #include "mongo/db/catalog/collection_catalog_entry.h"
 #include "mongo/db/catalog/database_catalog_entry.h"
 #include "mongo/db/catalog/database_holder.h"
@@ -205,8 +206,9 @@ namespace mongo {
 
             LOG(1) << "TTL: " << key << " \t " << query << endl;
 
-            long long n = 0;
-            {
+            long long numDeleted = 0;
+            int attempt = 1;
+            while (1) {
                 const string ns = idx["ns"].String();
 
                 ScopedTransaction scopedXact(txn, MODE_IX);
@@ -236,11 +238,23 @@ namespace mongo {
                     return true;
                 }
 
-                n = deleteObjects( txn, db, ns, query, PlanExecutor::YIELD_AUTO, false, true );
-                ttlDeletedDocuments.increment( n );
+                try {
+                    numDeleted = deleteObjects(txn,
+                                               db,
+                                               ns,
+                                               query,
+                                               PlanExecutor::YIELD_AUTO,
+                                               false,
+                                               true);
+                    break;
+                }
+                catch (const WriteConflictException& dle) {
+                    WriteConflictException::logAndBackoff(attempt++, "ttl", ns);
+                }
             }
 
-            LOG(1) << "\tTTL deleted: " << n << endl;
+            ttlDeletedDocuments.increment(numDeleted);
+            LOG(1) << "\tTTL deleted: " << numDeleted << endl;
             return true;
         }
     };
